--- a/src/tag.njk
+++ b/src/tag.njk
@@ -26,7 +26,7 @@ permalink: "tag/{{ tag | slugify }}/"
         <li>
           <a href="{{ link.url }}" target="_blank">{{ link.title }}</a>
           {%- for tag in link.tags -%}
-            <span class="text-xs"> [<a href="{{ '/tag/' | htmlBaseUrl }}{{ tag | slugify }}">{{ tag }}</a>]</span>
+            <span class="text-xs"> [<a href="/tag/{{ tag | slugify }}">{{ tag }}</a>]</span>
           {%- endfor -%}
         </li>
       {%- endfor -%}
